# projects

./: .gitignore  README.md
aaron/python/: README  and_gates.py  bubble.sort.py  hello_world.py  play_wav.py
aaron/scratch/: Aaron calculator program.sb3  bubble_sort.sb3  rand calculator.sb3  soccar_game.sb3  way too hard password.sb3
aaron_corner/python/: difference.py  hello_world.py  integral.py  sum.py
aaron_corner/scratch/: sqrt no block.sb3
android/CriminalIntent/: README.txt
android/ImgurDnloadr/: .gitignore
android/narrate-android/: README.md
cpp/CSAPP/: bit_level_operation.c  prog_obj_byte_representation.c  reverse_array.c
cpp/algo/: FactorialTrailingZeros.cpp  column_2_title.cpp  degree_of_array.cpp  max_depth_of_n_ary_tree.cpp  n_array_tree_traversal.cpp  non_recursive_inorder_travesal.cpp  set_mismatch.cpp
cpp/c/: bit_operation_on_equal.c  itoa_alternative_example.c  itoa_example.c
cpp/cpp_basics/: auto_test.cpp  copy_copy_constructor.cpp  lambda_tests.cpp  moving_semantics_tests.cpp  temp.cpp  template.cpp
cpp/cpp_tests/: CMakeLists.txt  FactorialTrailingZeros  copy_copy_constructor.cpp  happy_number  lvalue_rvalue_tests.cpp  mem_pool.cpp  moving_semantics_tests.cpp  ostream_wrapper.cpp  smart_pointer.cpp  sorting_banchmark.cpp  sum_input  vector_tests.cpp
cpp/docs/: README.md
cpp/modest_STL_tutorial/: README  int_cmp_v1.cpp  int_cmp_v2.cpp  int_cmp_v3.cpp
cpp/nmap/: README  nmap.c
cpp/quantlib_tests/: date_tests  date_tests.cpp  zero_bond_yield
cpp/samples/sentosa_latest/sentosa/src/: CMakeLists.txt  CMakeLists_INC.txt
cpp/samples/sentosa_latest/sentosa/src/algorithms/: CMakeLists.txt  algoFactory.cpp  algoFactory.h  dbb0.cpp  dbb0.h  singleta.cpp  singleta.h  spreadRange.h  volatility.cpp  volatility.h
cpp/samples/sentosa_latest/sentosa/src/common/: CMakeLists.txt  CommissionReport.h  CommonDefs.h  Contract.h  EClient.h  EClientSocket.h  EClientSocketBase.cpp  EClientSocketBase.h  EClientSocketBaseImpl.h  EPosixClientSocket.cpp  EPosixClientSocket.h  EPosixClientSocketPlatform.h  EWrapper.cpp  EWrapper.h  Execution.h  IBString.h  JsonDiff.cpp  JsonDiff.h  Order.h  OrderState.h  ScannerSubscription.h  TagValue.h  TwsSocketClientErrors.h  accInfo.h  algoengine.cpp  algoengine.h  basictypes.h  bstTime.cpp  bstTime.h  cband.cpp  cband.h  cmp.h  conf_ini.cpp  conf_ini.h  conf_yaml.cpp  conf_yaml.h  cwrapper.cpp  cwrapper.h  czmq.cpp  czmq.h  (+50 more)
cpp/samples/sentosa_latest/sentosa/src/sentosa/: CMakeLists.txt  api_core.cpp  api_core.h  api_nn.cpp  api_nn.h  api_ws.cpp  api_ws.h  callback.h  daemon.h  def.h  iborder.cpp  iborder.h  m.cpp  merlion.cpp  merlion.h  mkdata.cpp  mkdata.h  msgq.cpp  msgq.h  oid.h  r.sh  rsentosa.cpp  sentosa.cpp  sentosa_.cpp  sys_perf.h  threadfunc.cpp  threadfunc.h  tradingsystem.cpp  tradingsystem.h  tseries.h
cpp/understanding_CPP11/: func_2_2.cpp  func_2_3.cpp  long_long_int_2_5.cpp  macro_2_1.cpp  sizeof_2_18.cpp  vari_len_preprocessor_2_4.cpp
csharp/: README.md
csharp/entrep.csharp.tutorials/: entrep.csharp.tutorials.sln
databases/: interview_questions.txt
experiments/: README.txt
experiments/medium-blog-kafka-udemy/: README.txt
java/: coherence-visualvm-plugin-1.6.0-SNAPSHOT  java_systems.ipr  pom.xml
java/bigdata.Hadoop/: pom.xml
java/docs/: interviews.md
java/framework.spring.boot/: pom.xml
java/framework.spring.core/: pom.xml
java/java.core/: pom.xml
java/java_tests/: Logon.out  README.md  java_tests.ipr  pom.xml
java/java_tutorials/: LinkofFoo.ser  foo.ser  nonSeri.ser  pom.xml
java/jide_tests/: pom.xml
java/middleware.kafka/: pom.xml
java/spring.boot.stand_alone/: pom.xml
java/spring_tests/: pom.xml
java/spring_tutorials/: README.txt  pom.xml  spring_tutorials.ipr
java/webservice.ReSTFul/: pom.xml
java/webservice.ReSTFul.Jersey/: pom.xml
javascript/: interview_quiestions.txt  regex.html
javascript/hello_world/: app.js  index.html  util.js
javascript/js_basics/: index.html  main.js
javascript/libs/: index.html
javascript/streamer/: ccc-streamer-utilities.js  index.html  scratchpad_testParseStreamerMessage.js
javascript/typescript_tests/: .gitignore
javascript/vue_basics/: README.md  index.html  package-lock.json  package.json
javascript/vuejs_tests/: README.md  package-lock.json  (+1 more)
python/: README.md
(+2473 files in other folders)
